docs: update README JVM guidance for modern Java